--- a/package.json
+++ b/package.json
@@ -3,8 +3,18 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "babel-core": "*",
+    "babel-loader": "*",
+    "babel-plugin-add-module-exports": "*",
+    "babel-preset-stage-0": "*",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "css-loader": "^0.25.0",
+    "style-loader": "^0.13.1",
+    "webpack": "*",
+    "react": "^15.3.0",
+    "react-dom": "*",
     "express": "2.5.8",
-    "jade": ">= 0.0.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-beta6"
